# simulator

./: .gitignore  .gitmodules  compile_commands.json  flake.nix  log  scenario.json
src/: CMakeLists.txt  compile_commands.json  main.cpp  pajton.py
src/Headers/: Session.h  WebsocketServer.h  advanced_ai.h  airportData.h  common.h  controlParam.h  convertions.h  flightPlan.h  geoPos.h  listener.h  map.h  messageParsing.h  plane.h  planeConfig.h  scenario.h  session.h  sessionState.h  simulator.h  simulatorState.h  vec.h  velocity.h  websocketServer.h  websocketServerState.h
src/Sources/: advanced_ai.cpp  convertions.cpp  geoPos.cpp  listener.cpp  main.cpp  messageParsing.cpp  plane.cpp  scenario.cpp  session.cpp  simulator.cpp  velocity.cpp  websocketServer.cpp
test/: index.html  index.js
